still working on this

--- a/app/src/main/res/layout/event_enterdetails.xml
+++ b/app/src/main/res/layout/event_enterdetails.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Enter Event Details"
+        android:hint="Enter Event Details"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="48sp" />
 
