--- a/app/src/main/res/layout/fragment_profile_creation.xml
+++ b/app/src/main/res/layout/fragment_profile_creation.xml
@@ -23,12 +23,12 @@
         tools:layout_editor_absoluteX="5dp" />
 
     <EditText
-        android:id="@+id/editTextText2"
+        android:id="@+id/edit_homepage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="text"
-        android:text="Name"
+        android:text="Homepage"
         tools:layout_editor_absoluteX="93dp"
         tools:layout_editor_absoluteY="343dp" />
 
