--- a/app/src/main/res/layout/event_vieweventdetails.xml
+++ b/app/src/main/res/layout/event_vieweventdetails.xml
@@ -42,7 +42,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/event_viewdetailsDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -50,7 +50,7 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/event_viewLocationDetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -59,14 +59,16 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/event_eventPodterInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         android:src="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/event_eventDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -79,7 +81,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/event_organizedby"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -87,7 +89,7 @@
             android:text="Organized by:" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/event_EventLocationDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
