--- a/app/src/main/res/layout/event_uploadposter.xml
+++ b/app/src/main/res/layout/event_uploadposter.xml
@@ -7,7 +7,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:orientation="horizontal">
 
         <Button
@@ -22,21 +21,21 @@
         android:id="@+id/eventPosterImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="5"
+        android:layout_weight="1"
         android:padding="0dp" />
 
     <Button
         android:id="@+id/uploadPosterButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_margin="30dp"
         android:text="Upload Poster" />
 
     <Button
         android:id="@+id/event_posternext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_margin="30dp"
         android:text="next"
         android:visibility="gone" />
 </LinearLayout>
