Add theme overlay styles and update color values
Added new overlay style attributes for the Material Theme in theme_overlays.xml.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,143 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="md_theme_primary">#65558F</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#EADDFF</color>
+    <color name="md_theme_onPrimaryContainer">#21005D</color>
+    <color name="md_theme_secondary">#625B71</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#E8DEF8</color>
+    <color name="md_theme_onSecondaryContainer">#1D192B</color>
+    <color name="md_theme_tertiary">#7D5260</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#FFD8E4</color>
+    <color name="md_theme_onTertiaryContainer">#31111D</color>
+    <color name="md_theme_error">#B3261E</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#F9DEDC</color>
+    <color name="md_theme_onErrorContainer">#410E0B</color>
+    <color name="md_theme_background">#FEF7FF</color>
+    <color name="md_theme_onBackground">#1D1B20</color>
+    <color name="md_theme_surface">#FEF7FF</color>
+    <color name="md_theme_onSurface">#1D1B20</color>
+    <color name="md_theme_surfaceVariant">#E7E0EC</color>
+    <color name="md_theme_onSurfaceVariant">#49454F</color>
+    <color name="md_theme_outline">#79747E</color>
+    <color name="md_theme_outlineVariant">#CAC4D0</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#322F35</color>
+    <color name="md_theme_inverseOnSurface">#F5EFF7</color>
+    <color name="md_theme_inversePrimary">#D0BCFF</color>
+    <color name="md_theme_primaryFixed">#EADDFF</color>
+    <color name="md_theme_onPrimaryFixed">#21005D</color>
+    <color name="md_theme_primaryFixedDim">#D0BCFF</color>
+    <color name="md_theme_onPrimaryFixedVariant">#4F378B</color>
+    <color name="md_theme_secondaryFixed">#E8DEF8</color>
+    <color name="md_theme_onSecondaryFixed">#1D192B</color>
+    <color name="md_theme_secondaryFixedDim">#CCC2DC</color>
+    <color name="md_theme_onSecondaryFixedVariant">#4A4458</color>
+    <color name="md_theme_tertiaryFixed">#FFD8E4</color>
+    <color name="md_theme_onTertiaryFixed">#31111D</color>
+    <color name="md_theme_tertiaryFixedDim">#EFB8C8</color>
+    <color name="md_theme_onTertiaryFixedVariant">#633B48</color>
+    <color name="md_theme_surfaceDim">#DED8E1</color>
+    <color name="md_theme_surfaceBright">#FEF7FF</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#F7F2FA</color>
+    <color name="md_theme_surfaceContainer">#F3EDF7</color>
+    <color name="md_theme_surfaceContainerHigh">#ECE6F0</color>
+    <color name="md_theme_surfaceContainerHighest">#E6E0E9</color>
+    <color name="md_theme_primary_mediumContrast">#493971</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#7B6BA7</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#493971</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#7C6BA7</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#6B2F45</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#A55F77</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#6E2F2C</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#AA5F5A</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#FDF7FF</color>
+    <color name="md_theme_onBackground_mediumContrast">#1D1B20</color>
+    <color name="md_theme_surface_mediumContrast">#FDF7FF</color>
+    <color name="md_theme_onSurface_mediumContrast">#1D1B20</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#E7E0EB</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#45414A</color>
+    <color name="md_theme_outline_mediumContrast">#615D67</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#7D7983</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#322F35</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#F5EFF7</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#CFBDFE</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#7B6BA7</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#62538C</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#7C6BA7</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#62538C</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#A55F77</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#89475E</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#DED8E0</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#FDF7FF</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F8F2FA</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#F2ECF4</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#ECE6EE</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#E6E0E9</color>
+    <color name="md_theme_primary_highContrast">#27174E</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#493971</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#27174E</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#493971</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#420E24</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#6B2F45</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#440F0E</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#6E2F2C</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#FDF7FF</color>
+    <color name="md_theme_onBackground_highContrast">#1D1B20</color>
+    <color name="md_theme_surface_highContrast">#FDF7FF</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#E7E0EB</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#25232B</color>
+    <color name="md_theme_outline_highContrast">#45414A</color>
+    <color name="md_theme_outlineVariant_highContrast">#45414A</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#322F35</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#F1E8FF</color>
+    <color name="md_theme_primaryFixed_highContrast">#493971</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#322359</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#493971</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#322359</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#6B2F45</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#50192F</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#DED8E0</color>
+    <color name="md_theme_surfaceBright_highContrast">#FDF7FF</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#F8F2FA</color>
+    <color name="md_theme_surfaceContainer_highContrast">#F2ECF4</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#ECE6EE</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#E6E0E9</color>
 </resources>
