--- a/app/src/main/res/layout/event_signupevent.xml
+++ b/app/src/main/res/layout/event_signupevent.xml
@@ -16,17 +16,9 @@
             android:id="@+id/event_signup_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="300dp"
             android:layout_weight="1"
             android:text="Back" />
-
-        <Button
-            android:id="@+id/vieweventdetails_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_weight="1"
-            android:text="Profile" />
 
     </LinearLayout>
 
@@ -63,11 +55,11 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:fillViewport="true">
 
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -109,10 +101,17 @@
                     android:layout_weight="1"
                     android:paddingTop="20dp"
                     android:text="John Smith" />
+
             </LinearLayout>
 
         </LinearLayout>
 
     </ScrollView>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="I'm Interested" />
 
 </LinearLayout>
