--- a/app/src/main/res/layout/event_signupevent.xml
+++ b/app/src/main/res/layout/event_signupevent.xml
@@ -109,7 +109,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/event_signup_interested"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="I'm Interested" />
