--- a/app/src/main/res/layout/event_card.xml
+++ b/app/src/main/res/layout/event_card.xml
@@ -9,7 +9,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="8dp"
-    >
+            android:layout_margin="4dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
