Event qr creation and generating s done

--- a/app/src/main/res/layout/event_generate_info_checkin.xml
+++ b/app/src/main/res/layout/event_generate_info_checkin.xml
@@ -4,6 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/event_generate_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="300dp"
+        android:text="Back" />
+
     <TextView
         android:id="@+id/event_generate_TEXT"
         android:layout_width="match_parent"
