--- a/app/src/main/res/layout/event_generate_info_checkin.xml
+++ b/app/src/main/res/layout/event_generate_info_checkin.xml
@@ -14,14 +14,14 @@
         android:text="Back" />
 
     <TextView
-        android:id="@+id/event_generate_TEXT"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:shadowColor="@color/black"
-        android:text="Generate QR Code"
-        android:textSize="48sp"
-        android:textStyle="bold" />
+            android:id="@+id/event_generate_TEXT"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:shadowColor="@android:color/black"
+            android:text="Generate QR Code"
+            android:textSize="48sp"
+            android:textStyle="bold"/>
 
     <LinearLayout
         android:layout_width="match_parent"
