Revert "Reverted changes from main since they broke thins"
This reverts commit bb871d173c9c7d110bb4da2f4a835cf687d9b8b7.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,4 +75,9 @@
             android:layout_marginTop="10dp" />
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/qr_test_pic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
