--- a/app/src/main/res/layout/event_generate_info_checkin.xml
+++ b/app/src/main/res/layout/event_generate_info_checkin.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <Button
@@ -46,14 +47,30 @@
             android:layout_margin="20dp"
             android:layout_weight="1" />
 
-        <Button
-            android:id="@+id/event_generate_genBtn1"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
-            android:layout_marginRight="100dp"
-            android:layout_marginBottom="20dp"
-            android:text="Generate" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/event_generate_genBtn1"
+                android:layout_width="207dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginBottom="20dp"
+                android:text="Generate" />
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/share_btn1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="share"
+                android:visibility="invisible"
+                app:srcCompat="@drawable/baseline_share_24" />
+
+
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -78,13 +95,27 @@
             android:layout_margin="20dp"
             android:layout_weight="1" />
 
-        <Button
-            android:id="@+id/event_generate_generate2"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
-            android:layout_marginRight="100dp"
-            android:text="Generate" />
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/event_generate_generate2"
+                android:layout_width="207dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginBottom="20dp"
+                android:text="Generate" />
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/share_btn2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="share"
+                android:visibility="invisible"
+                app:srcCompat="@drawable/baseline_share_24" />
+        </LinearLayout>
     </LinearLayout>
 
     <Button
