created the adapter for notifications

--- a/app/src/main/res/layout/event_notification_page.xml
+++ b/app/src/main/res/layout/event_notification_page.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -17,25 +18,34 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Announcements"
+        android:textColor="@color/md_theme_onPrimaryFixed"
         android:textSize="48sp"
         android:textStyle="bold" />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_weight="1">
+        android:layout_margin="20dp"
+        android:layout_weight="1"
+        app:cardBackgroundColor="@color/md_theme_inversePrimary_highContrast"
+        app:cardCornerRadius="8dp">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </androidx.cardview.widget.CardView>
 
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="10dp"
-        android:text="Create Event" />
+        android:text="create notification" />
 
 </LinearLayout>
