finished the adapter for notifications

--- a/app/src/main/res/layout/event_notification_page.xml
+++ b/app/src/main/res/layout/event_notification_page.xml
@@ -6,14 +6,14 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/event_notification_page_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:text="back" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/event_notification_page_announcementText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -31,6 +31,7 @@
         app:cardCornerRadius="8dp">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/event_notification_page_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
@@ -39,7 +40,7 @@
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/event_notification_page_create_notification"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
