Notifications are showing in the adapter, but updating the adapter doesnt work

--- a/app/src/main/res/layout/event_notification_page.xml
+++ b/app/src/main/res/layout/event_notification_page.xml
@@ -39,8 +39,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/event_notification_page_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_height="match_parent">
 
         </androidx.recyclerview.widget.RecyclerView>
     </androidx.cardview.widget.CardView>
