Notification page correctly gets from database
Now just need to figure out how to do push notifications

--- a/app/src/main/res/layout/notification_recylerlist_card.xml
+++ b/app/src/main/res/layout/notification_recylerlist_card.xml
@@ -63,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="6dp"
                     android:paddingRight="6dp"
-                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus luctus nisl sed congue. In ut a..." />
+                    android:text="" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
