--- a/app/src/main/res/layout/checked_in_page.xml
+++ b/app/src/main/res/layout/checked_in_page.xml
@@ -13,22 +13,28 @@
         android:text="You have successfully checked in!"
         android:textAlignment="center"
         android:textSize="34sp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="92dp" />
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="196dp"
         android:layout_height="125dp"
-        app:srcCompat="@android:drawable/checkbox_on_background"
-        tools:layout_editor_absoluteX="98dp"
-        tools:layout_editor_absoluteY="239dp" />
+        android:layout_marginBottom="128dp"
+        app:layout_constraintBottom_toTopOf="@+id/go_to_event_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@android:drawable/checkbox_on_background" />
 
     <Button
         android:id="@+id/go_to_event_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="148dp"
         android:text="Go to Event"
-        tools:layout_editor_absoluteX="145dp"
-        tools:layout_editor_absoluteY="523dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
