Add cancel button to profile creation page
A cancel button has been added to the profile creation page in the user interface. The behavior associated with this button has been defined in the ProfileEditActivity.java. Upon clicking this button, the user is directed away from the current activity. This update improves user experience by providing a way to exit out of profile creation without making changes.

--- a/app/src/main/res/layout/fragment_profile_creation.xml
+++ b/app/src/main/res/layout/fragment_profile_creation.xml
@@ -5,6 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+            android:id="@+id/cancel_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="CANCEL"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="64dp"/>
     <EditText
             android:id="@+id/edit_name"
             android:layout_width="wrap_content"
@@ -18,14 +26,12 @@
             app:layout_constraintTop_toBottomOf="@+id/profile_pic" android:layout_marginTop="32dp"/>
 
     <Button
-        android:id="@+id/save_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SAVE"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.04"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/save_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SAVE"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/cancel_button"/>
 
     <EditText
             android:id="@+id/edit_homepage"
