fixed bar in homescreen (was middle now boottom) and new notification page

--- a/app/src/main/res/layout/user_notification_list.xml
+++ b/app/src/main/res/layout/user_notification_list.xml
@@ -23,7 +23,8 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_margin="20dp"
         app:cardBackgroundColor="@color/md_theme_inversePrimary_highContrast"
         app:cardCornerRadius="8dp" >
@@ -33,4 +34,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </androidx.cardview.widget.CardView>
+
+    <!-- Bottom Navigation View -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:menu="@menu/bottom_navigation_menu" />
+
 </LinearLayout>
