Added functionality to second button Explore and created new event explore page

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,7 +6,7 @@
 
     <item
         android:id="@+id/menu_item2"
-        android:title="Item 2" />
+        android:title="Explore" />
 
     <item
         android:id="@+id/menu_item3"
