Added functionality to third button Organized and created new organized events page

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -10,5 +10,5 @@
 
     <item
         android:id="@+id/menu_item3"
-        android:title="Item 3" />
+        android:title="Organized" />
 </menu>
