Direct user to Successful_Checked_In_Activity after scanning the QR code

--- a/app/src/main/res/layout/checked_in_page.xml
+++ b/app/src/main/res/layout/checked_in_page.xml
@@ -14,8 +14,9 @@
         android:textAlignment="center"
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
