--- a/app/src/main/res/layout/checked_in_page.xml
+++ b/app/src/main/res/layout/checked_in_page.xml
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp"
-        android:text="Share you Location for this Event?"
+        android:text="Share your Location for this Event?"
         app:layout_constraintBottom_toTopOf="@+id/go_to_event_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
