--- a/app/src/main/res/layout/admin_image_card.xml
+++ b/app/src/main/res/layout/admin_image_card.xml
@@ -9,7 +9,9 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/admin_image_card"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        app:cardCornerRadius="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
