--- a/app/src/main/res/layout/profile_card.xml
+++ b/app/src/main/res/layout/profile_card.xml
@@ -33,7 +33,7 @@
                 android:layout_width="118dp"
                 android:layout_height="102dp"
                 android:layout_margin="20dp"
-                android:src="@tools:sample/avatars"
+                android:src=""
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
