fragment is generated
Now need to finish the recycler view for it

--- a/app/src/main/res/layout/admin_view_image_page.xml
+++ b/app/src/main/res/layout/admin_view_image_page.xml
@@ -11,7 +11,7 @@
         android:layout_weight="20">
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/admin_view_image_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@tools:sample/avatars"
@@ -31,7 +31,7 @@
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView5"
+            app:layout_constraintStart_toEndOf="@+id/admin_view_image_back"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -43,6 +43,7 @@
         app:cardCornerRadius="8dp">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/admin_view_image_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </androidx.cardview.widget.CardView>
